# pydisort_doc

./: .gitignore  .readthedocs.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst
python/: CMakeLists.txt  __init__.py  pydisort.cpp
